--- a/pages/controle.html
+++ b/pages/controle.html
@@ -35,35 +35,36 @@
             Funções Administrativas-Controle
         </h1>
         <div class="topico">
-            <h2>Topico 1</h2>
+
             <p>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Libero eos, deleniti id quidem laboriosam quae aliquam
-                rerum quia facilis quibusdam tempora ipsam accusamus.
-                Dolore ullam deserunt ad reiciendis ut nihil!</p>
+                “O processo de controle consiste das ações sequenciais tomadas pela administração para estabelecer os
+                padrões de desempenho, medir e avaliar o desempenho, e tomar ações corretivas quando necessário”
+                (Montana & Charnov).A função administrativa do controle é basicamente coibir ou limitar as execuções de
+                uma equipe,
+                podendo também controlar certos comportamentos indesejados de modo que o ambiente de trabalho seja mais
+                proximo do que
+                se foi planejado, o controle pode ser visto de maneira negativa como uma forma de retirar a liberdade
+                dos
+                funcionarios.
+                O controle sobre uma equipe está diretamente ligado aos tipos de liderança de uma equipe já que em uma
+                equipe
+                com lider que exerce uma liderança sem intervenções teremos controle basicamente nenhum, no entanto em
+                uma liderança transacional
+                teremos uma ação de controle sempre que algum membro da equipe entregar a sua meta, será feita uma
+                correção caso o mesmo não esteja
+                alinhado com o comportamento desejado para a equipe ao qual a pessoa participa.
+                <br /><br /><br /><br /><br />
+                O Controle ao mesmo tempo que pode gerar desconforto em alguns membros da equipe pode ser tornar
+                algo benefico para alguns funcionarios , já que muitas vezes as pessoas no mercado podem não ter a
+                maturidade necessária para atuar na área e o controle aplicado de maneira corretiva pode sim ajudar
+                as pessoas a melhorarem profissionalmente, seja se adequando a equipe atual ou entendendo que aquele
+                tipo de liderança exercido não é benefico para esse funcionario e que ele deve buscar uma atuação onde
+                o mesmo possa sentir-se melhor.
+            </p>
 
         </div>
-        <div class="topico">
-            <h2>Topico 1</h2>
-            <p>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Libero eos, deleniti id quidem laboriosam quae aliquam
-                rerum quia facilis quibusdam tempora ipsam accusamus.
-                Dolore ullam deserunt ad reiciendis ut nihil!</p>
-
-        </div>
-        <div class="topico">
-            <h2>Topico 1</h2>
-            <p>
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Libero eos, deleniti id quidem laboriosam quae aliquam
-                rerum quia facilis quibusdam tempora ipsam accusamus.
-                Dolore ullam deserunt ad reiciendis ut nihil!</p>
-
-        </div>
     </div>
 
 
