--- a/pages/introducao.html
+++ b/pages/introducao.html
@@ -34,33 +34,119 @@
             Introduzação à adminstração- Organização e empresas
         </h1>
         <div class="topico">
-            <h2>Topico 1</h2>
+            <h2>Base sobre Administração</h2>
             <p>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Libero eos, deleniti id quidem laboriosam quae aliquam
-                rerum quia facilis quibusdam tempora ipsam accusamus.
-                Dolore ullam deserunt ad reiciendis ut nihil!</p>
+                Administração é um processo dinâmico de tomar decisões sobre a utilização
+                de recursos, para possibilitar a realização de objetivos” (MAXIMIANO, 2004,
+                p. 33). Com essa frase famos inicio vamos discorrer um pouco sobre a administração
+                e o primeiro ponto ao qual falaremos é o fato de que administrar não é uma área exclusivamente
+                dos negocios, podemos observar também que a administração faz parte das nossas vidas em geral
+                por exemplo se o nosso objetivo é fazer uma reforma na casa, deve ser feito um planejamento
+                economico e também a tomada de decisão de o que será feito, desse modo traçando um plano para
+                tais ações possam ser executadas da melhor forma possivél, e claro também temos o exemplo mais claro
+                da administração que é na área de negocios onde basicamente todos os negocios precisam de uma boa gestão
+                para que possa haver um boa densenvolvilmento ou uma constância para que a empresa seja estavél
+                financeiramente,
+                conseguindo issso por meio de uma boa gestão com tomadas de decisão.<br /><br />
+                A tomada de é o que separa uma boa adiministração de uma má administração.
+
+                planeja é o primeiro passo para traçar o caminho até o objetivo, organizar é fazer as separações que
+                precisam ser feitas
+                para que exista menos margem de erro, dirigir e controlar são relacionados a lideranca exercida sobre o
+                grupo para que possam,
+                chegar no objetivo alcançado.
+
+            </p>
 
         </div>
         <div class="topico">
-            <h2>Topico 1</h2>
+            <h2>Estrategias de organização</h2>
             <p>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Libero eos, deleniti id quidem laboriosam quae aliquam
-                rerum quia facilis quibusdam tempora ipsam accusamus.
-                Dolore ullam deserunt ad reiciendis ut nihil!</p>
+            <h3>Fordismo:</h3>
+            <p class="text"> Fordismo foi um tipo de organização trabalhista introduzida por Henry Ford
+                em 1914 , era uma linha de produção semi automatizada, parte com trabalho de maquinas e
+                parte com o trabalho humano, esse modelo de produção em massa tinha como meta a alta quantidade
+                de produtos finais,a administração nesse caso tem como planejamento organizar de maneira com que
+                as pessoas sejam extremamentes produtivas para cumprir metas grandes, onde era dirigido e controlado
+                por pessoas que vigiavam os trabalhadores em geral, em áreas mais altas para melhor supervisão,
+            </p>
+            <h3>Toyotismo:</h3>
+            <p class="text">
+                O Toyotismo foi idealizado pelos engenheiros Taiichi Ohno (1912-1990), Shingeo Shingo (1909-1990) e Eiji
+                Toyoda (1913-2013).
+
+                Este modelo produtivo foi desenvolvido entre 1948 e 1975 nas fábricas da montadora japonesa de
+                automóveis Toyota, da qual herdou o nome.
+
+                Essa maneira de organização foi criada como o planejamento de gastar menos dinheiro possivel durante a
+                produção
+                devido ao atual estado do pais, a administração no modelo Toyotista buscava também produção adequada
+                baseado
+                em sua atual demanda, redução de estoque, automação em algumas áreas da produção, e ao inves de uma mão
+                de obra
+                barata e sem qualificação, buscavam a excelência em sua produção, sendo isso parte da sua estrategia
+                de venda
+            </p>
+
 
         </div>
         <div class="topico">
-            <h2>Topico 1</h2>
+            <h2>Funções Administrativas</h2>
             <p>
+            <h3>Previsão:</h3>
+            <p class="text">
+                A previsão é o primeiro passo da administração, as previsões são periodicas
+                não é um tempo espefico, cada empreso faz suas previsões baseadas no calendario propio.
+                A previsão serve para ser traçado um plano de ação de modo que as tomadas de decisão ao
+                longo do projeto sejam mais faceis.
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Libero eos, deleniti id quidem laboriosam quae aliquam
-                rerum quia facilis quibusdam tempora ipsam accusamus.
-                Dolore ullam deserunt ad reiciendis ut nihil!</p>
+
+
+            </p>
+            <h3>Organização:</h3>
+            <p class="text">
+                A parte de organização é responsável para que o plano que foi criado durante o processo
+                de previsão seja cumprido ,contratando profissionais que se adequam as necessidades de
+                processo,uma boa gestão depende de uma boa organização.
+
+
+
+            </p>
+
+            <h3>Comando:</h3>
+            <p class="text">
+                Comandar requer conhecimento amplo das normas da empresa e dos subordinados, motivando a produtividade
+                individual, diálogo constante, otimização do emprego do tempo e do material e seletividade permanente.
+                o comando é responsável por manter as coisas alinhadas em relação as atuais necessidades
+
+            </p>
+
+
+            <h3>Cordenação:</h3>
+            <p class="text">
+                A cordenação serve também para fazer reuniões para tentar manter a equipé em foco,de maneira que
+                as duvidas da equipe sejam retiradas e manter o dialogo da equipe para manter um ambiente de trabalho
+                estavel
+
+
+
+            </p>
+
+            <h3>Controle:</h3>
+            <p class="text">
+                o controle é mais uma função relacionada a manter as pessoas da equipe focada no plano de ação, de modo
+                que é deve ser usado na medida certa já que alguns lideres extremamente controladores podem tornar o
+                ambiente
+                de trabalho desagradevel.
+
+
+
+            </p>
+
+
+            </p>
 
         </div>
     </div>
