--- a/pages/lideranca.html
+++ b/pages/lideranca.html
@@ -33,36 +33,113 @@
         <h1>
             Liderança
         </h1>
-        <div class="topico">
-            <h2>Topico 1</h2>
-            <p>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Libero eos, deleniti id quidem laboriosam quae aliquam
-                rerum quia facilis quibusdam tempora ipsam accusamus.
-                Dolore ullam deserunt ad reiciendis ut nihil!</p>
+        <p>A liderança é um tema com muita coisa para ser estudada , desde as suas estrategias até os seus diversos
+            tipos, nesta paginas
+            estaremos vendo alguns dos pontos importantes sobre a liderança </p>
+        <div class="topico">
+            <h2>O que é liderança ?</h2>
+            <p>Para o inicio vamos explicar de maneira resumida de onde vez a origem do termo lider,
+                o termo lider vem do inglés leader ou leadership que é referente ao cargo que conhecemos
+                como lider,usamos esse termo para nomear uma figura de autoridade sobre um determinado grupo,
+                ao longo da historia em geral varias maneiras de liderar foram criadas, algumas serão citadas
+                no topico a baixo, o lider de certo modo serve para nortear uma equipe mostrar onde devem chegar
+                alguns tipos de liderança mostram o exato caminho a ser seguido já outros deixam que a criatividade
+                seja explorada de modo que a pessoa crie seu propio caminho para chegar a o ponto determinado.
+
+
+            </p>
 
         </div>
         <div class="topico">
-            <h2>Topico 1</h2>
+            <h2>Tipos de liderança:</h2>
             <p>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Libero eos, deleniti id quidem laboriosam quae aliquam
-                rerum quia facilis quibusdam tempora ipsam accusamus.
-                Dolore ullam deserunt ad reiciendis ut nihil!</p>
+                será citado quatro tipos de liderança
+
+
+            </p>
+
+            <ol>
+                <span>
+                    <li>Liderança Transformacional </li>
+                </span>
+                <span>
+                    <li>Liderança Transacional</li>
+                </span>
+                <span>
+                    <li>Liderança Liderança autocrática</li>
+                </span>
+                <span>
+                    <li>Liderança Liderança Democrática</li>
+                </span>
+
+            </ol>
+            <h3>A lidenrança transformacional:</h3>
+            <p class="text"> É um tipo de lidenraça onde o responsavel pelo grupo busca uma mudança
+                no comportamento dos demais membros , motivando eles para que possam cumprir
+                as atividades obrigatorias e também fazer mais do que o basico, geralmente os
+                grupos com um lider com modo de operação transformacional aprensetam bom desempenho
+                devido muitas vezes a fluides da relação, já que a equipe muitas vezes tem autonomia
+                para trabalhar no seu padrão,além disso esse tipo de liderança é de certa forma "moderno"
+                já que as empresas mais tradicionais não constumam aceitar bem esse tipom de lider para
+                seus times
+            </p>
+            <h3>A lidenrança transacional:</h3>
+            <p class="text">
+                É um tipo de liderança onde o lider responsavel trabalho com um sistema simples de feedback
+                de modo bem objetivo e realmente simples,a atividade é passado e depois de um tempo "X"
+                a equipe retorna o que foi feito, e baseado na meta os participantes da equipe são
+                recompensados ou punidos, sendo o nome transacional por que é baseado em transações.
+                O ambiente gerado por esse tipo de liderança faz com que os membros acabem não tendo liberdade
+                criativa para poder fazer alterações onde acharem melhor.
+            </p>
+
+            <h3>A lidenrança Autocratica:</h3>
+            <p class="text">
+                A liderança autocratica é um dos sistemas que podemos falar mais conhecido desde os tempos antigos,
+                a rigidez sempre está presente o líder é uma imagem autoritaria e todas as pessoas nesse regime
+                devem seguir estreitamente as ordens ais quais foram submetidas, assim fazendo que também seja uma
+                liderança
+                sem liberdade criativa , por mais que muitas vezes pareça algo ruim, para serviços que devem ser
+                executados
+                seguindo protocolos restritos onde não pode acontecer erros minimos , é uma boa opção a ser seguido.
+            </p>
+
+            <h3>A lidenrança sem intervenção:</h3>
+            <p class="text">
+                Um estilo de liderança moderna, completamente oposto a liderança autocratica, o lider é a figura
+                responsavel por oferecer os meios de modo que a equipe possa concluir, não existe supervisão do
+                lider, ele apenas está a disposição da equipe caso necessario de modo que a liberdade criativa dos
+                membros do grupo possam ser exploradas tornando o trabalho de certo modo mais dinamico e prazeroso
+                , além de explorar mais as possibilidades e habilidades de cada membro da equipe
+            </p>
+
 
         </div>
         <div class="topico">
-            <h2>Topico 1</h2>
+            <h2>A importância de multiplos tipos de liderança </br>e também o seu problema</h2>
             <p>
+                Devido aos inúmeros tipos de lidenraça que conhecemos atualmente cada lider de equipe
+                pode exercer a o modo de lidenraça de maneira ao qual ele mais se adequa , então a sua equipe
+                estará sujeita a submissão desse tipo de liderança,no entanto a mudança de lider ou a troco de equipe
+                pode se tornar um problema ou um beneficio para o mesmo ,já que caso uma pessoa não esteja confortavel
+                com o tipo de liderança x, por exemplo, poderia trocar para uma equipe com lider que usa a liderança y,
+                como exemplo real, as forças militares usam o lider autoritario e as pessoas que se adequam a fazer
+                parte
+                de uma equipe militar quando saem acabam as vezes não se adaptando a um mercado de trabalho atual com
+                lideres
+                sem intervenção ou mais liberais em relação a criatividade.
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Libero eos, deleniti id quidem laboriosam quae aliquam
-                rerum quia facilis quibusdam tempora ipsam accusamus.
-                Dolore ullam deserunt ad reiciendis ut nihil!</p>
+                devido a essa atual condição do mercado um funcionario não satisfeito ou um chefe que não se adequou
+                a equipe poderia mudar de equipe de maneira que ele possa se sentir mais confortavel em seu ambiente
+                de trabalho assim fazendo com que
+                as pessoas possam buscar um local no mercado de trabalho onde tenham uma boa convivência profissional,
+
+            </p>
 
         </div>
+
     </div>
 
 
