--- a/pages/minicurso.html
+++ b/pages/minicurso.html
@@ -34,33 +34,67 @@
             Minicurso
         </h1>
         <div class="topico">
-            <h2>Topico 1</h2>
+            <h2>O que é um banco de dados ?</h2>
             <p>
+                Banco de dados é uma maneira de salvar e organizar dados em tabelas que ficam salvas
+                em um sistema virtual , de modo que esses dados podém ser melhores manipulados com a ultilização
+                de algum software, por exemplo uma loja ao inves de ter o controle em papel do seu estoque, eles usam
+                um banco de dados com o seu atual estoque, e um software (programa de computador)para fazer as adições
+                e retiradas de produtos dentro daquele estoque, fazendo com que a gestão se torne mais agradavel,
+                além disso com os bancos de dados podemos guardar os historicos de algum negocio, como por exemplo a
+                estrategia que foi adotada ou o produto novo, e como o finânceiro dessa empresa reagiu
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Libero eos, deleniti id quidem laboriosam quae aliquam
-                rerum quia facilis quibusdam tempora ipsam accusamus.
-                Dolore ullam deserunt ad reiciendis ut nihil!</p>
+            </p>
 
         </div>
         <div class="topico">
-            <h2>Topico 1</h2>
+            <h2>Business intelligence</h2>
             <p>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Libero eos, deleniti id quidem laboriosam quae aliquam
-                rerum quia facilis quibusdam tempora ipsam accusamus.
-                Dolore ullam deserunt ad reiciendis ut nihil!</p>
+                business intelligence é uma área da tecnologia especializada no desenvolvimento dos negocios,
+                basicamente um analista de BI ou uma equipe de BI é contratado(a) para que sejam analisadas as
+                estrategias de mercado,analisar dados disponiveis para que possa ser traçado uma estrategoa
+                e além disso analisar quais os beneficios ou consequencias ao tomar certas decisões, para que o
+                resultado
+                seja o mais proximo do esperado segundo o plano que foi traçado pela empresa,a explicação dos bancos de
+                dado
+                foi dado para que possa ser entendido de onde são retirados muitas vezes os dados de outras empresas, já
+                que
+                as empresas estão usando bancos de dados para poder registrar suas estrategias de negocio e o andamento
+                do processo.
+
+            </p>
 
         </div>
         <div class="topico">
-            <h2>Topico 1</h2>
+            <h2> TI para os negôcios ao longo do tempo</h2>
             <p>
+                A tecnologia sempre foi um modo de fazer com que certas atividades se tornassem mais faceis,
+                desde a revolução industrial com a crianção do motor a vapor e as grandes produções, até a criação
+                de sistemas para melhorar a gestão de impresas, TI ou tecnlogia da informação é uma tecnlogia que surgiu
+                para beneficiar diversas áreas, a área dos negocios é uma que em especial a muitos anos já vem
+                ultilizando ela,
+                as maquinas diferetimente dos humanos não são tão passiveis de falha depois que uma ordem especifica é
+                passada,
+                obviamente a pessoa que desenvolveu o software pode errar,no entanto quando um software é feito para
+                analisar decisões baseadas
+                em inumeros bancos de dados, seu resultado é preciso. O TI é ultilizado nos negocios desde que seja
+                viavel finânceiramente já que
+                as empresas investião grandes quantidades de dinheiro para que fosse possivel ter um simples computador,
+                e com o tempo isso foi melhorando
+                de modo que atualmente qualquer pequeno empreendedor pode sim ter um computador para fazer a gestão de
+                seus projetos, gestão financeira
+                ou outro tipo de controle sobre o seu negocio,o mundo que foi gerado graças a tecnlogia possibilita
+                também a comunicação e facilita a
+                globalização, de modo que um especialista estrangeiro possa trabalhar em uma empresa multinacional
+                remotamente. Da mesma forma que antigamente um simples banco de dados era uma incrivel
+                inovação para os negocios hoje em dia as possibilidades com a teclogia estão em constante expansão,
+                desde softwares para gerência de projetos até softwares que fazem previsão para qual estrategia deve ser
+                adotada
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Libero eos, deleniti id quidem laboriosam quae aliquam
-                rerum quia facilis quibusdam tempora ipsam accusamus.
-                Dolore ullam deserunt ad reiciendis ut nihil!</p>
+
+
+            </p>
 
         </div>
     </div>
