--- a/pages/planejamento.html
+++ b/pages/planejamento.html
@@ -31,38 +31,52 @@
     </div>
     <div class="conteudo">
         <h1>
-            Funções Administrativas-Controle
+            Funções Administrativas-Planejamento
         </h1>
         <div class="topico">
-            <h2>Topico 1</h2>
-            <p>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Libero eos, deleniti id quidem laboriosam quae aliquam
-                rerum quia facilis quibusdam tempora ipsam accusamus.
-                Dolore ullam deserunt ad reiciendis ut nihil!</p>
+            <p>
+                Segundo Montana & Charnov, “planejamento é o processo de determinar os objetivos e metas organizacionais
+                e como realizá-los”
+                <br /><br />
+                O planejamento envolve coisas como: Escolher o destino, que é o ato de fazer a devida analisa para
+                saber qual a meta da equipe ou negocio e expor aquilo como meta atual.
+                Avaliar os caminhos alternativos, que consiste em ver quais as possibilidades podem ser exploradas para
+                que o caminho escolhido
+                possa ser alcançado de maneira mais pratica , onde será determinado quais as funções serão usadas.
+                Decidir o rumo específico para o destino escolhido. depois da analise das possibilidades mostradas
+                a pessoa responsavel ou grupo responsavel pela meta irá escolher uma estrategia para que o resultado
+                possa ser alcançado de que será passado para a equipe o que deve ser feito, como deve ser feito, e com
+                separação de funções bem definida
+
+            <h2>Ramos do planejamento</h2>
+            <h3>Estratégico :</h3>
+            <p class="text">
+                –Estratégico É o planejamento do rumo de uma organização e de todos os seus componentes. Direciona a
+                missão da organização em termos de sua principal atividade. Resultados do planejamento estratégico
+                incluem diretrizes amplas e gerais para a seleção de áreas de atividades ou mercados nos quais devemos
+                penetrar, ou dos quais devemos nos retirar. Tem um longo horizonte de tempo e olha para o futuro em
+                termos da missão da organização
+            <h3>Tático :</h3>
+            <p class="text">
+                Analisa alternativas à realização da missão, onde os resultados normalmente são alvos de oportunidade
+                dentro da indústria ou do mercado. Tem um período de tempo mais curto do que o estratégico, e examina
+                mais especificamente variáveis como as condições de mercado, os objetivos financeiros e os recursos
+                necessários para realizar a missão. Todo planejamento tático é feito dentro da estrutura do plano
+                estratégico.
+            </p>
+            <h3>Operacional :</h3>
+            <p class="text">
+                É o planejamento do dia a dia. Tem um período de tempo ainda mais curto do que o planejamento tático e é
+                responsável por cronogramas, tarefas específicas e alvos mensuráveis, envolvendo gerentes em cada
+                unidade, que serão responsáveis pela realização do plano. Em geral, existem três níveis de planejamento
+            </p>
+
+
+            </p>
 
         </div>
-        <div class="topico">
-            <h2>Topico 1</h2>
-            <p>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Libero eos, deleniti id quidem laboriosam quae aliquam
-                rerum quia facilis quibusdam tempora ipsam accusamus.
-                Dolore ullam deserunt ad reiciendis ut nihil!</p>
-
-        </div>
-        <div class="topico">
-            <h2>Topico 1</h2>
-            <p>
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Libero eos, deleniti id quidem laboriosam quae aliquam
-                rerum quia facilis quibusdam tempora ipsam accusamus.
-                Dolore ullam deserunt ad reiciendis ut nihil!</p>
-
-        </div>
     </div>
 
 
